[metadata]
name = dandelion
version = attr: dandelion.__version__
author = Minhyeok Lee
author_email = mlee@yonsei.ac.kr
description = Near TS region sampler for machine learning force field
python_requires = >=3.11
classifiers =
    License :: MIT License
    Programming Language :: Python :: 3
long_description = file: README.md

[options]
packages = find:
install_requires = 
    h5py==3.9.0
    rdkit==2023.3.3
    tqdm==4.66.1
    typing-extensions==4.8.0

[options.entry_points]
console_scripts =
    dand = dandelion.cli:main
